# publishers_test_python

./: Makefile  main.py  pyproject.toml
app/publishers/: publisher.py  task_publisher.py
app/workers/: task_worker.py
config/: redis.py
